# procheiron-core

./: .gitignore  CHANGELOG.md  CLAIMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deployment_report.yml
.github/workflows/: ci.yml  release.yml
conformance/: manifest.json  run_conformance.py  test_crypto_smoke.py  test_mcp_smoke.py  test_policy_smoke.py  test_scorecard_smoke.py
conformance/generic-vault/.procheiron/: config.yaml
conformance/generic-vault/.procheiron/profiles/meridian/: lint.json  profile.md  retrieval.md
conformance/generic-vault/console/: ACTIVE_PROJECTS.md  AGENT_BOOT.md  AGENT_REGISTRY.md  BLOCKERS.md  DECISIONS.md  PRECEDENCE.md  PROCHEIRON.md  RETRIEVAL_POLICY.md  SELF_ACTION_POLICY.md  SOURCE_OF_TRUTH.md
conformance/generic-vault/knowledge/wiki/: DESIGN_PRINCIPLES.md
conformance/generic-vault/memory/: README.md  SCHEMA.md  VALIDATION.md
conformance/generic-vault/memory/index/: audit.jsonl  memories.jsonl  supersessions.jsonl
conformance/generic-vault/runtime/state/: STATE.json
conformance/generic-vault/sources/: MATERIAL_STANDARDS.md
conformance/generic-vault/studio/: STUDIO_GOVERNANCE.md
conformance/minimal-vault/: memory_promote.py  memory_propose.py
conformance/minimal-vault/.procheiron/: config.yaml
conformance/minimal-vault/console/: CONSOLE.md
conformance/minimal-vault/memory/: SCHEMA.md
conformance/minimal-vault/memory/index/: audit.jsonl  memories.jsonl
conformance/minimal-vault/schemas/: memory_record.schema.json
examples/minimal-adopter/: README.md  memory_promote.py  procheiron_schema.py  validate_minimal.py
init/: PORTING_GUIDE.md  procheiron_init.py
spec/: README.md  boundary.md  conformance.md  control-plane.md  governance.md  memory-commons.md
src/procheiron/: __init__.py  chain.py  cli.py  init.py  lifecycle.py  lock.py  mcp_server.py  paths.py  patterns.py  policy.py  resolve.py  scorecard.py  signing.py  validate.py
src/procheiron/data/adopter/: memory_promote.py  memory_propose.py  validate_minimal.py
src/procheiron/data/policy/: policy_data.json  procheiron.rego  procheiron_test.rego
src/procheiron/data/schemas/: adapter_manifest.schema.json  audit_event.schema.json  config.schema.json  manifest.schema.json  memory_record.schema.json  profile_lint.schema.json  required_tokens.json  severity_map.json  source_record.schema.json  supersession.schema.json
